--- a/kas/ktn-common.yml
+++ b/kas/ktn-common.yml
@@ -26,3 +26,10 @@ repos:
       meta-networking:
       meta-oe:
       meta-python:
+
+env:
+  SEMVER: 0.0.0-dev
+
+local_conf_header:
+  set_semver:
+    DISTRO_VERSION = "${SEMVER}"
