ci: Build container only if containerfile or CI script changes

--- a/ci/container-build.yml
+++ b/ci/container-build.yml
@@ -12,7 +12,11 @@
   # In case we are not on the main branch, we only want to do build testing for
   # the image, without pushing anything to the registry.
   rules:
-    - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: never
+    - changes:
+        - ktn-kas.Containerfile
+        - ci/container-build.yml
 
 .build-deploy-container:
   tags:
@@ -26,4 +30,8 @@
     - podman push $CI_REGISTRY_IMAGE/$TAG
   # In case we are on the main branch, we want to build and push the image.
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+      when: never
+    - changes:
+        - ktn-kas.Containerfile
+        - ci/container-build.yml
