--- a/ci/yocto-ktn-build.yml
+++ b/ci/yocto-ktn-build.yml
@@ -51,17 +51,12 @@ workflow:
   # runs bitbake for the given targets.
   #
   kas:
+    - kas build $KAS_CONFIG:kas/ktn-shared-cache.yml
     - |
-      if test -n "$BUILD_TARGETS"; then
-        export KAS_TARGET="$BUILD_TARGETS"
-        kas build $KAS_CONFIG:kas/ktn-shared-cache.yml
-      fi
-    - |
-      if test -n "$BUILD_SDKS"; then
-        export KAS_TARGET="$BUILD_SDKS"
+      if test "$BUILD_SDK" == "yes"; then
         export KAS_TASK="$BUILD_SDK_TASK"
         kas build $KAS_CONFIG:kas/ktn-shared-cache.yml
-
+      fi
 #
 # This is a template for the build job that runs the build for the requested
 # targets. The resulting artifacts expire after some time.
