--- a/kas/inc/common.yml
+++ b/kas/inc/common.yml
@@ -26,6 +26,16 @@ repos:
       meta-networking:
       meta-oe:
       meta-python:
+  meta-qt5:
+    url: https://github.com/meta-qt5/meta-qt5
+    path: layers/meta-qt5
+    refspec: master
+  meta-python2:
+    url: git://git.openembedded.org/meta-python2
+    path: layers/meta-python2
+  meta-swupdate:
+    url: https://github.com/sbabic/meta-swupdate
+    path: layers/meta-swupdate
 
 env:
   SEMVER: 0.0.0-dev
