--- a/kas/ktn-mp1.yml
+++ b/kas/ktn-mp1.yml
@@ -4,5 +4,5 @@
 header:
   version: 12
   includes:
-    - kas/ktn-mx8mm-head.yml
-    - kas/inc/refspecs/imx.yml
+    - kas/ktn-mp1-head.yml
+    - kas/inc/refspecs/stm32mp.yml
