--- a/kas/ktn-mx6ul.yml
+++ b/kas/ktn-mx6ul.yml
@@ -4,8 +4,5 @@
 header:
   version: 12
   includes:
-    - ktn-imx.yml
-
-machine: kontron-mx6ul
-target:
-  - image-ktn
+    - kas/ktn-mx6ul-head.yml
+    - kas/inc/refspecs/imx.yml
