meta-ktn: ktn.conf: Include poky.conf and make Yocto-base-series-agnostic
In the past we copied content from poky.conf into our own distro
config. This bears the problem of redundant configuration. Let's
include poky.conf and only overwrite values where needed.

If we need a custom distro config based on ktn.conf (for customer
projects, etc.) we should create a copy of ktn.conf in the custom
layer and change the content as needed.

This also makes use of the BASE_SERIES variable passed via
local.conf to determine for which Yocto series/release we are
building.

--- a/layers/meta-ktn/conf/distro/ktn.conf
+++ b/layers/meta-ktn/conf/distro/ktn.conf
@@ -1,14 +1,17 @@
+require conf/distro/include/ktn-base.inc
+
 DISTRO = "ktn"
-DISTRO_NAME ?= "Kontron Electronics Reference Distro"
-DISTRO_VERSION ?= "${@ '0.0.0-dev' if not d.getVar('SOURCECODE_VERSION') else d.getVar('SOURCECODE_VERSION') }"
-DISTRO_CODENAME ?= "ktn-dunfell"
+DISTRO_NAME = "Kontron Electronics Reference Distro"
+DISTRO_VERSION = "${@ '0.0.0-dev' if not d.getVar('SEMVER') else d.getVar('SEMVER') }"
+BASE_SERIES ?= "undefined"
+OVERRIDES =. "${BASE_SERIES}:"
+DISTRO_CODENAME_SUFFIX ?= "${BASE_SERIES}"
+DISTRO_CODENAME = "ktn-${DISTRO_CODENAME_SUFFIX}"
 
 SDK_VENDOR = "-ktnsdk"
-SDK_VERSION = "${@d.getVar('DISTRO_VERSION').replace('snapshot-${DATE}', 'snapshot')}"
-SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
 SDKPATHINSTALL = "/opt/kontron/${MACHINE}/${SDK_VERSION}"
 
-MAINTAINER ?= "Kontron Electronics GmbH <support@kontron-electronics.de>"
+MAINTAINER = "Kontron Electronics GmbH <support@kontron-electronics.de>"
 TARGET_VENDOR = "-ktn"
 
 # =========================================================================
@@ -16,26 +19,10 @@ TARGET_VENDOR = "-ktn"
 # =========================================================================
 PACKAGE_FEED_URIS ?= "http://192.168.1.10/"
 
-# remove '-g' because otherwise release-builds with
-# the meta-toolchain are build with debugging symbols
-FULL_OPTIMIZATION:remove = "-g"
-
-DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${MACHINE}"
-IMAGE_NAME = "${IMAGE_BASENAME}-${MACHINE}-${DISTRO_CODENAME}-v${DISTRO_VERSION}-${DATE}"
-IMAGE_NAME[vardepsexclude] = "TIME DATE DATETIME"
-
-DISTRO_EXTRA_RDEPENDS = "packagegroup-core-boot"
-DISTRO_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
-
 GCNANO_USERLAND_USE_VENDOR_DIR = "0"
 
 # add the manifest and the licenses file on image generated
 COPY_LIC_MANIFEST = "1"
-
-# =========================================================================
-# include some basic settings copied from poky
-# =========================================================================
-require conf/distro/include/ktn-base.inc
 
 # =========================================================================
 # build info
@@ -51,13 +38,6 @@ IMAGE_BUILDINFO_VARS = "${BUILDCFG_VARS}"
 INHERIT += "image-buildinfo"
 
 # =========================================================================
-# default/preferred providers
-# =========================================================================
-PREFERRED_PROVIDER_libevent = "libevent-fb"
-PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
-PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
-
-# =========================================================================
 # init system
 # =========================================================================
 VIRTUAL-RUNTIME_init_manager = "sysvinit"
@@ -67,29 +47,5 @@ VIRTUAL-RUNTIME_initscripts = "initscripts"
 # distro features
 # =========================================================================
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "systemd"
-
-DISTRO_FEATURES = " \
-	alsa \
-	argp \
-	bluetooth \
-	bluez5 \
-	ext2 \
-	ext4 \
-	gplv3 \
-	gstreamer \
-	ipv4 \
-	ipv6 \
-	largefile \
-	multiarch \
-	nfs \
-	opengl \
-	optee \
-	pam \
-	pulseaudio \
-	usbgadget \
-	usbhost \
-	wifi \
-	xattr \
-	zeroconf \
-	${DISTRO_FEATURES_LIBC} \
-"
+POKY_DEFAULT_DISTRO_FEATURES:remove = "vulkan wayland"
+DISTRO_FEATURES:remove = "x11"
