meta-ktn-imx: Migrate to new meta-freescale SoC override scheme

--- a/layers/meta-ktn-imx/conf/layer.conf
+++ b/layers/meta-ktn-imx/conf/layer.conf
@@ -30,4 +30,4 @@ BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bb"
 LAYERVERSION_ktn-imx = "1"
 LAYERSERIES_COMPAT_ktn-imx = "zeus dunfell"
 LAYERDEPENDS_ktn-imx = "ktn freescale-layer"
-LAYERDEPENDS_ktn-imx:append:mx8m = " meta-arm"
+LAYERDEPENDS_ktn-imx:append:mx8m-nxp-bsp = " meta-arm"
