meta-ktn-stm32mp: Fix invalid assignment operator for appends in recipes
This fixes the following type of warning:

    [...] += is not a recommended operator combination, please replace it

--- a/layers/meta-ktn-stm32mp/conf/machine/stm32mp-t1000.conf
+++ b/layers/meta-ktn-stm32mp/conf/machine/stm32mp-t1000.conf
@@ -51,7 +51,7 @@ require conf/machine/include/extlinux-t1000.inc
 # =========================================================================
 # Machine specific software packages
 # =========================================================================
-CORE_IMAGE_EXTRA_INSTALL:append += ""
+CORE_IMAGE_EXTRA_INSTALL:append = ""
 
 # recommend machine-specific packages to install (Touchscreen drivers)
 MACHINE_EXTRA_RRECOMMENDS += ""
@@ -65,5 +65,3 @@ KERNEL_MODULE_AUTOLOAD += ""
 
 # Only build tar.gz
 IMAGE_FSTYPES = "tar.gz"
-
-
