--- a/kas/inc/stm32mp.yml
+++ b/kas/inc/stm32mp.yml
@@ -7,8 +7,12 @@ header:
     - kas/inc/common.yml
 
 repos:
-  meta-ktn-stm32mp:
-    path: layers/meta-ktn-stm32mp
-  meta-st-stm32mp:
-    url: http://github.com/STMicroelectronics/meta-st-stm32mp
-    path: layers/meta-st-stm32mp
+  meta-ktn-imx:
+    layers:
+      layer-path: disabled
+  meta-arm:
+    layers:
+      layer-path: disabled
+  meta-freescale:
+    layers:
+      layer-path: disabled
