--- a/kas/ktn-mx6ul.yml
+++ b/kas/ktn-mx6ul.yml
@@ -4,5 +4,8 @@
 header:
   version: 12
   includes:
-    - kas/ktn-mx6ul-head.yml
-    - kas/inc/refspecs/imx.yml
+    - kas/inc/imx.yml
+
+machine: kontron-mx6ul
+target:
+  - image-ktn
