--- a/kas/series/dunfell.yml
+++ b/kas/series/dunfell.yml
@@ -3,6 +3,11 @@
 
 header:
   version: 12
+  includes:
+    - kas/inc/common.yml
+
+env:
+  YOCTO_SERIES: dunfell
 
 repos:
   poky:
@@ -15,3 +20,9 @@ repos:
     refspec: c08ae4b515538baf7d07aa0c152ad78e482ecc3c
   meta-python2:
     refspec: b901080cf57d9a7f5476ab4d96e56c30db8170a8
+  meta-arm:
+    refspec: 58dbad789d5fa0dc0283e16f1f6944210820d40b
+  meta-freescale:
+    refspec: ae2001935fdd7cf7ee7e3b8a4826d7b59202be6d
+  meta-st-stm32mp:
+    refspec: 73632fb844b6ebbef2a9d2acc7cc4783083a14a3
