--- a/layers/meta-ktn-imx/conf/layer.conf
+++ b/layers/meta-ktn-imx/conf/layer.conf
@@ -19,6 +19,14 @@ BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.bbappend' % layer \
 BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.bb' % layer \
                for layer in BBFILE_COLLECTIONS.split())}"
 
+# Let us add series-specific bbappends which are only applied if
+# BASE_SERIES is set accordingly
+BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bbappend"
+
+# Let us add series-specific bbs which are only applied if
+# BASE_SERIES is set accordingly
+BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bb"
+
 LAYERVERSION_ktn-imx = "1"
 LAYERSERIES_COMPAT_ktn-imx = "zeus dunfell"
 LAYERDEPENDS_ktn-imx = "ktn freescale-layer"
