meta-ktn: Add possibility to add series-specific recipes or bbappends

--- a/layers/meta-ktn/conf/layer.conf
+++ b/layers/meta-ktn/conf/layer.conf
@@ -19,6 +19,14 @@ BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.bbappend' % layer \
 BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.bb' % layer \
                for layer in BBFILE_COLLECTIONS.split())}"
 
+# Let us add series-specific bbappends which are only applied if
+# BASE_SERIES is set accordingly
+BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bbappend"
+
+# Let us add series-specific bbs which are only applied if
+# BASE_SERIES is set accordingly
+BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bb"
+
 HOSTTOOLS:append = "xxd"
 
 # Set Kontron server paths and repositories
