meta-ktn: Remove zeus and add kirkstone in LAYERSERIES_COMPAT_ktn

--- a/layers/meta-ktn/conf/layer.conf
+++ b/layers/meta-ktn/conf/layer.conf
@@ -43,5 +43,5 @@ EXCEET_GIT_USER ?= "${KTN_GIT_USER}"
 EXCEET_GIT_PWD ?= "${KTN_GIT_PWD}"
 
 LAYERVERSION_ktn = "1"
-LAYERSERIES_COMPAT_ktn = "zeus dunfell"
+LAYERSERIES_COMPAT_ktn = "dunfell kirkstone"
 LAYERDEPENDS_ktn = "yocto openembedded-layer"
