meta-ktn-imx: Remove zeus and add kirkstone in LAYERSERIES_COMPAT_ktn-imx

--- a/layers/meta-ktn-imx/conf/layer.conf
+++ b/layers/meta-ktn-imx/conf/layer.conf
@@ -28,6 +28,6 @@ BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bbappend"
 BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bb"
 
 LAYERVERSION_ktn-imx = "1"
-LAYERSERIES_COMPAT_ktn-imx = "zeus dunfell"
+LAYERSERIES_COMPAT_ktn-imx = "dunfell kirkstone"
 LAYERDEPENDS_ktn-imx = "ktn freescale-layer"
 LAYERDEPENDS_ktn-imx:append:mx8m-nxp-bsp = " meta-arm"
