meta-ktn-stm32mp: Add kirkstone in LAYERSERIES_COMPAT_ktn-stm32mp

--- a/layers/meta-ktn-stm32mp/conf/layer.conf
+++ b/layers/meta-ktn-stm32mp/conf/layer.conf
@@ -44,5 +44,5 @@ BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bbappend"
 BBFILES += "${LAYERDIR}/series-compat/${BASE_SERIES}/recipes*/*/*.bb"
 
 LAYERVERSION_ktn-stm32mp = "1"
-LAYERSERIES_COMPAT_ktn-stm32mp = "dunfell"
+LAYERSERIES_COMPAT_ktn-stm32mp = "dunfell kirkstone"
 LAYERDEPENDS_ktn-stm32mp = "ktn stm-st-stm32mp"
