kas: Fix usage of env and head build config
Kas doesn't support referencing env variables as we assumed it would.
Rewrite the config to take account of this.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ bsp:build:
   rules:
     - if: $HEAD_BUILD == "1"
       variables:
-        KAS_CONFIG: "${KAS_CONFIG}:kas/dev/head.yml"
+        KAS_CONFIG: "${KAS_CONFIG}:kas/dev/head-${YOCTO_SERIES}.yml"
     - when: always
 
 # Build Container Image
