--- a/kas/series/dunfell.yml
+++ b/kas/series/dunfell.yml
@@ -7,7 +7,11 @@ header:
     - kas/inc/common.yml
 
 env:
-  YOCTO_SERIES: dunfell
+  BASE_SERIES: dunfell
+
+defaults:
+  repos:
+    refspec: dunfell
 
 repos:
   poky:
