--- a/kas/series/kirkstone.yml
+++ b/kas/series/kirkstone.yml
@@ -7,7 +7,11 @@ header:
     - kas/inc/common.yml
 
 env:
-  YOCTO_SERIES: kirkstone
+  BASE_SERIES: kirkstone
+
+defaults:
+  repos:
+    refspec: kirkstone
 
 repos:
   poky:
