kas: Build with debug-tweaks in EXTRA_IMAGE_FEATURES by default
And allow to disable the debug-tweaks by using kas/production.yml.

--- a/kas/inc/common.yml
+++ b/kas/inc/common.yml
@@ -14,6 +14,10 @@ defaults:
     patches:
       repo: meta-kontron
 
+local_conf_header:
+  dev-build: |
+    EXTRA_IMAGE_FEATURES = "debug-tweaks"
+
 repos:
   # Add base repo, so we can use it as base for patch files
   meta-kontron:
