meta-ktn-imx: u-boot-ktn: Add support for extension board in env script

--- a/layers/meta-ktn-imx/recipes-bsp/u-boot/u-boot-ktn/ktn-mx8mm/sl-mx8mm.env
+++ b/layers/meta-ktn-imx/recipes-bsp/u-boot/u-boot-ktn/ktn-mx8mm/sl-mx8mm.env
@@ -4,6 +4,7 @@ bootargs_base=rootwait
 bootcfg=auto
 bootcmd=run vendor_bootcmd;
 dfu_alt_info=sf 0:0=flash-bin raw 0x400 0x1f0000
+extension_board=0
 fallback_active=0
 fdt_addr_r=0x48000000
 fdtoverlay_addr_r=0x49000000
@@ -38,7 +39,7 @@ vendor_bootcmd_net=
 	run netargs;
 	setenv bootargs ${bootargs} ${bootargs_base};
 	tftp ${loadaddr} ${image_base};
-	bootm ${loadaddr}#conf-${bootcfg};
+	bootm ${loadaddr}#${bootcfg};
 
 vendor_detect_config=
 	gpio clear ${touch_rst_gpio};
@@ -51,11 +52,17 @@ vendor_detect_config=
 	else
 		setenv board_type;
 	fi;
+	setenv bootcfg_ext conf-freescale_imx8mm-kontron-bl${board_type}-extension.dtbo;
 	if i2c probe 0x5d; then
 		echo 'LVDS Panel detected';
-		setenv bootcfg freescale_imx8mm-kontron-dl${board_type}.dtb;
+		setenv bootcfg conf-freescale_imx8mm-kontron-dl${board_type}.dtb;
 	else
-		setenv bootcfg freescale_imx8mm-kontron-bl${board_type}.dtb;
+		setenv bootcfg conf-freescale_imx8mm-kontron-bl${board_type}.dtb;
+	fi;
+	if test ${extension_board} = 1; then
+		setenv bootcfg ${bootcfg}#${bootcfg_ext};
+	else
+		setenv bootcfg ${bootcfg};
 	fi;
 
 vendor_emmc_ab_boot=
@@ -73,7 +80,7 @@ vendor_emmc_ab_boot=
 			wdt dev watchdog@30280000;
 			wdt start 15000;
 		fi;
-		bootm ${loadaddr}#conf-${bootcfg};
+		bootm ${loadaddr}#${bootcfg};
 	else
 		echo ------------------------ ;
 		echo $image not found.        ;
@@ -85,7 +92,7 @@ vendor_emmc_ab_boot=
 vendor_mmc_boot=
 	setenv bootargs root=/dev/mmcblk1p2 ${bootargs_base};
 	if fatload mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then
-		bootm ${loadaddr}#conf-${bootcfg};
+		bootm ${loadaddr}#${bootcfg};
 	fi;
 
 vendor_set_ab_bootargs=
