meta-ktn-imx: kontron-mx8mm.conf: Add devicetree overlay for extension board

--- a/layers/meta-ktn-imx/conf/machine/kontron-mx8mm.conf
+++ b/layers/meta-ktn-imx/conf/machine/kontron-mx8mm.conf
@@ -14,6 +14,7 @@ KERNEL_DEVICETREE = " \
 	freescale/imx8mm-kontron-dl.dtb \
 	freescale/imx8mm-kontron-bl-osm-s.dtb \
 	freescale/imx8mm-kontron-dl-osm-s.dtb \
+	freescale/imx8mm-kontron-bl-extension.dtbo \
 	"
 
 UBOOT_CONFIG[kontron-mx8mm] = "kontron-sl-mx8mm_defconfig"
