kas: Enable meta-multimedia layer by default

--- a/kas/inc/common.yml
+++ b/kas/inc/common.yml
@@ -35,6 +35,7 @@ repos:
     url: https://github.com/openembedded/meta-openembedded.git
     path: layers/meta-openembedded
     layers:
+      meta-multimedia:
       meta-networking:
       meta-oe:
       meta-python:
