--- a/ci/yocto-ktn-build.yml
+++ b/ci/yocto-ktn-build.yml
@@ -1,5 +1,5 @@
 variables:
-  BUILD_IMAGE: "$CI_REGISTRY_IMAGE/kas-ktn:latest"
+  BUILD_IMAGE: "registry.kontron-electronics.de/sw/ked/meta-kontron/kas-ktn:latest"
   BUILD_SDK_TASK: populate_sdk
   GIT_DEPTH: 0 # in order to use GitVersion we need the full history available
 
