libgpiod: Upgrade to v1.6.4 and add recipe for v2.0
This backports the latest libgpiod recipes from meta-oe master. The
new libgpiod v2 includes major changes and improvements and might be
required in certain use cases.

For now the default remains v1.6 while someone who needs the v2 can
set PREFERRED_VERSION_libgpiod = "2.0".

--- a/layers/meta-ktn/conf/distro/ktn.conf
+++ b/layers/meta-ktn/conf/distro/ktn.conf
@@ -38,6 +38,11 @@ IMAGE_BUILDINFO_VARS = "${BUILDCFG_VARS}"
 INHERIT += "image-buildinfo"
 
 # =========================================================================
+# default/preferred providers/versions
+# =========================================================================
+PREFERRED_VERSION_libgpiod ?= "1.6.4"
+
+# =========================================================================
 # init system
 # =========================================================================
 VIRTUAL-RUNTIME_init_manager = "sysvinit"
