docs: Add initial version of docs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,14 @@
 include:
   - '/ci/yocto-ktn-build.yml'
   - '/ci/container-build.yml'
+  - project: 'sw/ked/docs/mkdocs-ked'
+    ref: main
+    file: '/ci/docs-build.yml'
 
 stages:
   - build-container
   - build
+  - deploy
 
 # Build Yocto BSPs
 .build-matrix: &build-matrix
@@ -47,3 +51,14 @@ container:build:
 container:build-deploy:
   extends: .build-deploy-container
   <<: *container-vars
+
+# Build Documentation
+docs:build:
+  extends: .docs:build
+  variables:
+    DOCS_SUBDIR: docs
+
+docs:trigger:
+  extends: .docs:trigger
+  variables:
+    DOCS_SUBDIR: docs
