meta-ktn-imx: u-boot-ktn: allow default fit config
If bootcfg is unset, the default fit image configuration will be used.

--- a/layers/meta-ktn-imx/recipes-bsp/u-boot/u-boot-ktn/ktn-mx8mm/sl-mx8mm.env
+++ b/layers/meta-ktn-imx/recipes-bsp/u-boot/u-boot-ktn/ktn-mx8mm/sl-mx8mm.env
@@ -26,8 +26,15 @@ altbootcmd=
 	setenv bootargs_base ${bootargs_base} fallback;
 	run vendor_bootcmd;
 
+vendor_bootm=
+       if test -n "${bootcfg}"; then
+               bootm ${loadaddr}#${bootcfg};
+       else
+               bootm ${loadaddr};
+       fi;
+
 vendor_bootcmd=
-	if test $bootcfg = 'auto'; then
+	if test "$bootcfg" = 'auto'; then
 		run vendor_detect_config;
 	fi;
 	for target in ${vendor_boot_targets}; do
@@ -39,7 +46,7 @@ vendor_bootcmd_net=
 	run netargs;
 	setenv bootargs ${bootargs} ${bootargs_base};
 	tftp ${loadaddr} ${image_base};
-	bootm ${loadaddr}#${bootcfg};
+	run vendor_bootm;
 
 vendor_detect_config=
 	gpio clear ${touch_rst_gpio};
@@ -80,7 +87,7 @@ vendor_emmc_ab_boot=
 			wdt dev watchdog@30280000;
 			wdt start 15000;
 		fi;
-		bootm ${loadaddr}#${bootcfg};
+		run vendor_bootm;
 	else
 		echo ------------------------ ;
 		echo $image not found.        ;
@@ -92,7 +99,7 @@ vendor_emmc_ab_boot=
 vendor_mmc_boot=
 	setenv bootargs root=/dev/mmcblk1p2 ${bootargs_base};
 	if fatload mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then
-		bootm ${loadaddr}#${bootcfg};
+		run vendor_bootm;
 	fi;
 
 vendor_set_ab_bootargs=
