CI: Add support for test builds and automated testing via labgrid
This allows to set TESTING to "true" in order to build the test image
for the selected platforms, deploy it on the labgrid test farm and run
the tests via pytest.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ include:
   - '/ci/docs.yml'
   - '/ci/package.yml'
   - '/ci/deploy.yml'
+  - '/ci/test.yml'
   - '/ci/release.yml'
 
 stages:
@@ -11,4 +12,5 @@ stages:
   - build
   - package
   - deploy
+  - test
   - release
