--- a/ci/inc/common.yml
+++ b/ci/inc/common.yml
@@ -7,6 +7,11 @@ workflow:
     #
     - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS && $CI_PIPELINE_SOURCE == "push"
       when: never
+    #
+    # Run testing pipelines only when triggered manually or via schedule.
+    #
+    - if: '$TESTING == "true" && $CI_PIPELINE_SOURCE != "schedule" && $CI_PIPELINE_SOURCE != "web"'
+      when: never
     - when: always
 
 .parse-bbenv:
@@ -37,3 +42,9 @@ variables:
       - "false"
       - "true"
     description: "Use the HEADs for all OE layers instead of the checked-in refspecs."
+  TESTING:
+    value: "false"
+    options:
+      - "false"
+      - "true"
+    description: "Run test build jobs and test jobs."
