meta-ktn-imx: kontron-mx8mm.conf: Remove OSM-S i.MX8MM DL devicetree and switch to overlay

--- a/layers/meta-ktn-imx/conf/machine/kontron-mx8mm.conf
+++ b/layers/meta-ktn-imx/conf/machine/kontron-mx8mm.conf
@@ -11,9 +11,8 @@ MACHINE_FEATURES += "rtc pwm-buzzer can usbgadget emmc wifi screen"
 
 KERNEL_DEVICETREE = " \
 	freescale/imx8mm-kontron-bl.dtb \
-	freescale/imx8mm-kontron-dl.dtb \
+	freescale/imx8mm-kontron-dl.dtbo \
 	freescale/imx8mm-kontron-bl-osm-s.dtb \
-	freescale/imx8mm-kontron-dl-osm-s.dtb \
 	freescale/imx8mm-kontron-bl-extension.dtbo \
 	"
 
