--- a/layers/meta-ktn-imx/recipes-bsp/u-boot/u-boot-ktn/ktn-mx8mm/sl-mx8mm.env
+++ b/layers/meta-ktn-imx/recipes-bsp/u-boot/u-boot-ktn/ktn-mx8mm/sl-mx8mm.env
@@ -59,12 +59,11 @@ vendor_detect_config=
 	else
 		setenv board_type;
 	fi;
+	setenv bootcfg conf-freescale_imx8mm-kontron-bl${board_type}.dtb;
 	setenv bootcfg_ext conf-freescale_imx8mm-kontron-bl${board_type}-extension.dtbo;
 	if i2c probe 0x5d; then
 		echo 'LVDS Panel detected';
-		setenv bootcfg conf-freescale_imx8mm-kontron-dl${board_type}.dtb;
-	else
-		setenv bootcfg conf-freescale_imx8mm-kontron-bl${board_type}.dtb;
+		setenv bootcfg ${bootcfg}#conf-freescale_imx8mm-kontron-dl${board_type}.dtbo;
 	fi;
 	if test ${extension_board} = 1; then
 		setenv bootcfg ${bootcfg}#${bootcfg_ext};
