--- a/layers/meta-ked-stm32mp/recipes-ked/production-tool/mptool/stm32mp-t1006/mptool.config
+++ b/layers/meta-ked-stm32mp/recipes-ked/production-tool/mptool/stm32mp-t1006/mptool.config
@@ -15,9 +15,9 @@ TFA_IMG="tf-a-stm32mp-t1002-trusted.stm32"
 UBOOT_IMG="u-boot-stm32mp-t1006-trusted.stm32"
 
 #boot + rootfs (SIZE in MiB)
-BOROOTFS_IMG="image-ktn-stm32mp-t1006.tar.gz"
+BOROOTFS_IMG="image-ked-stm32mp-t1006.tar.gz"
 BOROOTFS_SIZE="200"
 
 #userfs (if size empty -> all remaining space taken else SIZE in MiB)
-USERFS_IMG="image-ktn-userfs-stm32mp-t1006-thud.tar.gz"
+USERFS_IMG="image-ked-userfs-stm32mp-t1006-thud.tar.gz"
 USERFS_SIZE=
